{
    "name": "PlayerControlls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "63fd45f0-803d-472e-81ab-9e4e0a552401",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c183f72a-0b49-4db4-b58a-ac6f6105f10b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunK",
                    "type": "Button",
                    "id": "067a258f-7bbc-49d0-9f3d-f66ee9637523",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunC",
                    "type": "Button",
                    "id": "595a6d20-7ccd-40f2-9d80-6db7b75ebaa3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cheat1",
                    "type": "Button",
                    "id": "b01b05c4-4634-4f2e-8850-b23dbb6dd8cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cheat2",
                    "type": "Button",
                    "id": "230ac3da-8a0d-4bb3-9b24-220f73801df2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PauseK",
                    "type": "Button",
                    "id": "01084e5a-2f5b-4132-9f59-dbcba434fb6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PauseT",
                    "type": "Button",
                    "id": "049b8d98-2d2f-42bf-a399-0df64d66f592",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af7cd7b8-43b2-4a42-bb36-025e8f2e8df2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5690c0d-7203-433b-84c7-d389f1676cfe",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunK",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e06bbc48-60bf-4388-b977-35ee5dbfb46b",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e360940-db58-4224-a9d0-7b2dbbb5426c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cheat1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "587eab27-aeb3-4099-8d80-f84007f03da3",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cheat2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8909084-a707-406f-879b-7359ea75ab84",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseK",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfc79be9-df62-40ca-ace7-e30bf9f2d5d4",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseT",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}